Fixing some color contrast issues

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -6,6 +6,7 @@
   align-items: center;
   padding: var(--spacingMD) var(--spacingLG);
   font-family: var(--fontFamilySecondary);
+  border-bottom: 3px solid #000; /* black is just a placeholder to be overidden */
   font-weight: 700;
   font-size: 1rem;
   cursor: pointer;
@@ -19,17 +20,19 @@
 }
 
 .Button--primary {
-  background-color: var(--cerulean);
+  background-color: var(--deepCerulean);
   color: var(--white);
+  border-color: var(--bahamaBlue);
 }
 
 .Button--secondary {
   background-color: var(--white);
   color: var(--limedSpruce);
-  border: 2px solid var(--cerulean);
+  border: 2px solid var(--deepCerulean);
 }
 
 .Button--ghost {
   background-color: var(--white);
   color: var(--limedSpruce);
+  border-color: var(--grayNurse);
 }
