--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -28,5 +28,5 @@
   font-weight: 700;
   text-transform: uppercase;
   color: var(--white);
-  background-color: var(--cerulean);
+  background-color: var(--deepCerulean);
 }
