--- a/src/variables/global.css
+++ b/src/variables/global.css
@@ -5,7 +5,8 @@
   --fontFamilySecondary: 'Source Sans Pro', sans-serif;
 
   /* colors */
-  --cerulean: #00A6E0;
+  --deepCerulean: #007FAD;
+  --bahamaBlue: #006C94;
   --limedSpruce: #39444E;
   --grayNurse: #EAECE8;
   --boulder: #757575;
